# mia-proyecto-aplicado

./: .gitignore  Readme.md  app.py  pyproject.toml
datasets/: evaluation_results.csv  golden_dataset.csv
src/: config.py
src/application/ports/: embedder_port.py  loader_port.py  vector_store_port.py
src/application/services/: dataset_generation_service.py  evaluation_service.py  indexing_service.py  rag_service.py
src/domain/: models.py
src/infrastructure/embeddings/: gemini.py  huggingface.py
src/infrastructure/evaluation/: ragas_generator.py
src/infrastructure/llm/: gemini_factory.py  local_llm_factory.py
src/infrastructure/loaders/: factory.py  pdf_loader.py
src/infrastructure/services/: service_factory.py
src/infrastructure/vector_stores/: qdrant_db.py
src/scripts/: generate_test_dataset.py  run_eval.py  run_pipeline.py
